--- a/styles/main.css
+++ b/styles/main.css
@@ -226,13 +226,15 @@ margin-bottom: 0%;
 background-color: rgba(5, 116, 207, 0);
 
 border: none;
+
+width: 8%;
     
 }
 
 .next-section img{
 
 
-    width: 20%;
+    width: 100%;
 
     
 }
@@ -271,12 +273,42 @@ width: 7%;
     justify-content: center;
 }
 
+#hamburgher{
+
+    display: none;
+}
+
 
 @media screen and (max-width:576px) {
 
     header{
 
         display: none;
+
+        position: fixed;
+
+        width: 100%;
+
+        height: 100%;
+    }
+
+    nav ul {
+
+        display: flex;
+        flex-direction: column;
+
+        justify-content: space-between;
+        height: 100%;
+
+    }
+
+    #hamburgher{
+        display: block;
+        position: fixed;
+        z-index: 2;
+
+        top: 0;
+        right: 0;
     }
    
     #dark_mode{
