--- a/styles/main.css
+++ b/styles/main.css
@@ -13,6 +13,10 @@
         rgba(105, 240, 238, 0.3)
       ), url("../images/Day.png");
     --night_two: url("../images/Night.jpg");
+
+    --day_bg_2: var(rgb(39, 132, 155));
+
+    --night_bg_2: var(rgb(2, 2, 53));
   }
 
   html {
@@ -195,13 +199,13 @@ h6,h5,h4,h3,h2,h1, nav ul li{
 .dayBackGround1{
     background-image:  var(--day_two);
     background-repeat: repeat;
-    background-color: rgb(39, 132, 155);
+    background-color: var(--day_bg_2);
 }
 
 .nightBackGround1{
 
     background-image: var(--night_two);
-    background-color: rgb(2, 2, 53);
+    background-color: var(--night_bg_2);
 }
 
 #profile{
@@ -276,6 +280,21 @@ width: 7%;
 #hamburgher{
 
     display: none;
+    background-color: rgba(240, 248, 255, 0);
+    border: none;
+
+    width: 30px;
+    background-color: rgba(128, 128, 128, 0.621);
+   
+    border-radius: 20%;
+
+}
+#hamburgher img{
+
+    width: 100%;
+
+    
+
 }
 
 
@@ -287,7 +306,7 @@ width: 7%;
 
         position: fixed;
 
-        width: 100%;
+        width: 90%;
 
         height: 100%;
     }
@@ -303,12 +322,12 @@ width: 7%;
     }
 
     #hamburgher{
-        display: block;
+        display: flex;
         position: fixed;
         z-index: 2;
-
+        align-items: center;
         top: 0;
-        right: 0;
+        right: 10%;
     }
    
     #dark_mode{
