--- a/styles/main.css
+++ b/styles/main.css
@@ -283,7 +283,7 @@ width: 7%;
     background-color: rgba(240, 248, 255, 0);
     border: none;
 
-    width: 30px;
+    width: 50px;
     background-color: rgba(64, 61, 92, 0.621);
    
     border-radius: 20%;
@@ -306,9 +306,12 @@ width: 7%;
 
         position: fixed;
 
-        width: 90%;
+        width: 100%;
 
         height: 100%;
+
+        transform: none;
+        transition: all 0.5s ease;
     }
 
     nav ul {
@@ -327,7 +330,7 @@ width: 7%;
         z-index: 2;
         align-items: center;
         top: 0;
-        right: 10%;
+        right: 0;
     }
    
     #dark_mode{
