--- a/styles/main.css
+++ b/styles/main.css
@@ -14,9 +14,11 @@
       ), url("../images/Day.png");
     --night_two: url("../images/Night.jpg");
 
-    --day_bg_2: var(rgb(39, 132, 155));
+    --day_bg_2: rgb(39, 132, 155);
 
-    --night_bg_2: var(rgb(2, 2, 53));
+    --night_bg_2: rgb(2, 2, 53);
+
+    --button_bg: rgba(48, 69, 104, 0.638);
   }
 
   html {
@@ -86,8 +88,8 @@ nav ul li:hover{
 }
 
 main{
-    max-width: 790px;
-    min-height: 800px;
+    
+    
     margin: 0 auto;
 
     font-size: 1rem;
@@ -97,6 +99,8 @@ main{
 
 
 header{
+
+
  
     margin: 0% auto;
     
@@ -208,7 +212,7 @@ h6,h5,h4,h3,h2,h1, nav ul li{
     background-color: var(--night_bg_2);
 }
 
-#profile{
+#main-content{
     display: flex;
     
     align-items: center;
@@ -224,20 +228,18 @@ h6,h5,h4,h3,h2,h1, nav ul li{
 
 .next-section{
 
+    background: none;
+        
+    margin-bottom: 0%;
+    border: none;
 
-margin-bottom: 0%;
-
-background-color: rgba(5, 116, 207, 0);
-
-border: none;
-
-width: 8%;
-    
+    width: 8%;
+   
 }
 
 .next-section img{
 
-
+    
     width: 100%;
 
     
@@ -265,26 +267,30 @@ a img{
 }
 
 .contacts a{
+   
+    width: 7%;
+    
 
-width: 7%;
+    border-radius: 10px;
 
 }
 
 .contacts{
-
+    display: flex;
+    flex-direction: row;
     gap: 10px;
-
+    
     justify-content: center;
 }
 
 #hamburgher{
 
     display: none;
-    background-color: rgba(240, 248, 255, 0);
+  
     border: none;
 
     width: 50px;
-    background-color: rgba(64, 61, 92, 0.621);
+    background-color:  var(--button_bg);
    
     border-radius: 20%;
 
@@ -297,21 +303,40 @@ width: 7%;
 
 }
 
+a:hover, button:hover{
+
+    cursor: pointer;
+}
+
+
+.skip-navigation{
+
+    position: absolute;
+
+    left: -1000000px;
+    top: -1000000px;
+}
+
 
 @media screen and (max-width:576px) {
 
     header{
 
-        display: none;
+        display: block;
 
         position: fixed;
 
         width: 100%;
 
-        height: 100%;
+        
 
-        transform: none;
+        top:-300px;
         transition: all 0.5s ease;
+    }
+    .header_show{
+
+        top:0px;
+
     }
 
     nav ul {
@@ -340,6 +365,8 @@ width: 7%;
     }
 }
 
+
+
 @media screen and (max-width:768px) {
 
    
@@ -348,12 +375,32 @@ width: 7%;
          
     }
     
-    
+    #dark_mode{
+        font-size: 25px;
 
-}
+
+    }
 
 
-a:hover, button:hover{
+    .next-section{
 
-    cursor: pointer;
-}
+
+        margin-bottom: 0%;
+        background: none;
+        
+        border: none;
+        
+        width: 15%;
+            
+        }
+        
+    .next-section img{
+        
+        
+            width: 100%;
+        
+            
+
+}}
+
+
